--- a/Intro to Node.js/01.Cat-Shelter-Workshop-Resources/resources/views/home/index.html
+++ b/Intro to Node.js/01.Cat-Shelter-Workshop-Resources/resources/views/home/index.html
@@ -1,4 +1,4 @@
-module.exports = `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -87,4 +87,4 @@ module.exports = `<!DOCTYPE html>
 
 </body>
 
-</html>`
+</html>
