added stars to details page

--- a/Workshop ExpressJS and Templating/Movie-Magic-Workshop/views/details.hbs
+++ b/Workshop ExpressJS and Templating/Movie-Magic-Workshop/views/details.hbs
@@ -13,7 +13,7 @@
           <div class="second-info">
             <p class="card-year">Year: {{movie.date}}</p>
             <p class="card-ranking">Rating:
-              <span id="stars">&#x2605; &#x2605; &#x2605; &#x2605;</span></p>
+              <span id="stars">{{{movie.ratingStars}}}</span></p>
           </div>
 
         </div>
